--- a/css/style-error.scss
+++ b/css/style-error.scss
@@ -54,7 +54,9 @@ a {
     text-align: center;
     padding: 10px 30px;
 }
-
+p + .btn-transparent{
+    margin-top: 5px;
+}
 /*=== MAIN CONTENT  ===*/
 .main-content {
     min-height: 100vh;
@@ -94,10 +96,36 @@ a {
         margin-top: 110px;
         margin-bottom: 50px;
         text-align: right;
-        p + .btn-transparent{
-            margin-top: 5px;
-        }
     }
 }
 
-// Estilos para la página de error 404
+/*===============================================
+                    ERROR 500  
+===============================================*/
+#page-500{
+    background-image: url(../img/bg-500.jpg);
+    background-position: 0 50%;
+    padding-bottom: 40px;
+    .logo-emesh {
+        display: block;
+        height: 120px;
+    }
+    .error-title{
+        font-size: 90px;
+        margin-bottom: 25px;
+        line-height: 2.5rem;
+        > b{
+            letter-spacing: 6px;
+        }
+        > span {
+            font-size: 30px;
+        }
+    }
+    .error-information {
+        max-width: 455px;
+        margin-top: 110px;
+        margin-bottom: 50px;
+        text-align: right;
+    }
+}
+
